@@ -93,7 +93,7 @@ use Bric::App::Callback::Profile::Category;
 use Bric::App::Callback::Profile::Contrib;
 use Bric::App::Callback::Profile::Desk;
 use Bric::App::Callback::Profile::Dest;
-use Bric::App::Callback::Profile::ElementData;
+use Bric::App::Callback::Profile::FieldType;
 use Bric::App::Callback::Profile::FormBuilder;
 use Bric::App::Callback::Profile::Grp;
 use Bric::App::Callback::Profile::Job;
